--- a/public/components/atoms/Button/button.css
+++ b/public/components/atoms/Button/button.css
@@ -11,47 +11,6 @@
 /*
 * 입력란
 */
-.input {
-  font-family: "SUITE", sans-serif;
-  background-color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 10px;
-  border: 1px solid #292e1e;
-  width: 75%;
-  height: 3.5rem;
-  max-width: 1200px;
-  max-height: 800px;
-  box-sizing: border-box;
-  transition: border 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-  color: #292e1e;
-  font-size: 1rem;
-}
-@font-face {
-  font-family: "SUITE";
-  font-weight: 400;
-  src: url("/fonts/SUITE-Regular.woff2") format("woff2");
-}
-.input::-moz-placeholder {
-  color: #948b89;
-}
-.input::placeholder {
-  color: #948b89;
-}
-.input:focus {
-  border-color: #3423a6;
-  box-shadow: 0 0 5px rgba(249, 112, 104, 0.5);
-  outline: none;
-}
-.input.error {
-  border-color: #f97068;
-  box-shadow: 0 0 5px rgba(249, 112, 104, 0.5);
-}
-.input.disabled {
-  color: #948b89;
-  cursor: not-allowed;
-  pointer-events: none;
-}
-
 .button {
   font-family: "SUITE", sans-serif;
   width: 75%;
@@ -208,17 +167,4 @@
   font-family: "SUITE";
   font-weight: 400;
   src: url("/fonts/SUITE-Regular.woff2") format("woff2");
-}
-
-.span {
-  font-family: "SUITE", sans-serif;
-  color: #292e1e;
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
-}
-@font-face {
-  font-family: "SUITE";
-  font-weight: 400;
-  src: url("/fonts/SUITE-Regular.woff2") format("woff2");
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=button.css.map */
