--- a/public/scss/abstracts/_variables.scss
+++ b/public/scss/abstracts/_variables.scss
@@ -1,33 +1,40 @@
-/*
-* 색상 변수
-*/
-$black-color: #292E1E;
-$white-color: #FAFFFD;
-$gray-color: #948B89;
-$blue-color: #3423A6;
-$red-color: #F97068;
-$yellow-color: #F9DC5C;
+// 색상 변수
+$black-color: #292e1e;
+$white-color: #fafffd;
+$gray-color: #948b89;
+$blue-color: #3423a6;
+$red-color: #f97068;
+$yellow-color: #f9dc5c;
 
-/*
-* 폰트 경로
-*/
-$font-path: '/fonts';
+$max-width: 1200px;
+$max-height: 800px;
+$min-width: 300px;
+$min-height: 50px;
 
-/*
-* 버튼
-*/
+// 폰트 경로
+$font-path: "/fonts/";
+
+// 버튼
 $button-radius: 22px;
-$button-padding: 0.5em 1.5em;
+$button-padding: 0.5rem 1.5rem;
 $button-transition: 0.2s ease-in-out;
 
-/*
-* 입력란
-*/
+$button-widht: 75%;
+$button-height: 6rem;
+$button-small-width: 30%;
+$button-small-height: 4rem;
+
+// 입력란
 $input-radius: 10px;
-$input-padding: 0.5em 1em;
+$input-padding: 0.5rem 1rem;
 $input-border: 1px solid $black-color;
 $input-transition: 0.2s ease-in-out;
 $input-focus-border-color: $blue-color;
 $input-error-border-color: $red-color;
+
+$input-widht: 75%;
+$input-height: 3.5rem;
+$input-small-width: 30%;
+$input-small-height: 2.5rem;
 
 $input-box-shadow: 0 0 5px rgba($red-color, 0.5);
