--- a/public/components/atoms/Input/input.css
+++ b/public/components/atoms/Input/input.css
@@ -9,22 +9,24 @@
 * 입력란
 */
 /*
-* 입력란
+* span
+*/
+/*
+* label
+*/
+/*
+* 이미지
 */
 .input {
   font-family: "SUITE", sans-serif;
+  font-weight: 400;
   background-color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 10px;
-  border: 1px solid #292e1e;
-  width: 75%;
-  height: 3.5rem;
-  max-width: 1200px;
-  max-height: 800px;
-  box-sizing: border-box;
-  transition: border 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  border: none;
+  outline: none;
+  width: 85%;
+  height: 80%;
   color: #292e1e;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 @font-face {
   font-family: "SUITE";
@@ -36,15 +38,6 @@
 }
 .input::placeholder {
   color: #948b89;
-}
-.input:focus {
-  border-color: #3423a6;
-  box-shadow: 0 0 5px rgba(249, 112, 104, 0.5);
-  outline: none;
-}
-.input.error {
-  border-color: #f97068;
-  box-shadow: 0 0 5px rgba(249, 112, 104, 0.5);
 }
 .input.disabled {
   color: #948b89;
