--- a/public/scss/abstracts/_variables.scss
+++ b/public/scss/abstracts/_variables.scss
@@ -6,18 +6,25 @@ $blue-color: #3423a6;
 $red-color: #f97068;
 $yellow-color: #f9dc5c;
 
-$max-width: 1200px;
-$max-height: 800px;
-$min-width: 300px;
-$min-height: 50px;
+// ui 공통 변수
+$big-width: 75%;
+$big-max-width: 800px;
+$big-min-width: 250px;
+
+$small-width: 30%;
+$small-max-width: 400px;
+$small-min-width: 150px;
+
+$border: 2px solid $gray-color;
+$border-radius: 22px;
+
+$transition: 0.2s ease-in-out;
 
 // 폰트 경로
 $font-path: "/fonts/";
 
 // 버튼
-$button-radius: 22px;
 $button-padding: 0.5rem 1.5rem;
-$button-transition: 0.2s ease-in-out;
 
 $button-widht: 75%;
 $button-height: 6rem;
@@ -25,16 +32,18 @@ $button-small-width: 30%;
 $button-small-height: 4rem;
 
 // 입력란
-$input-radius: 10px;
-$input-padding: 0.5rem 1rem;
-$input-border: 1px solid $black-color;
-$input-transition: 0.2s ease-in-out;
 $input-focus-border-color: $blue-color;
 $input-error-border-color: $red-color;
 
 $input-widht: 75%;
-$input-height: 3.5rem;
+$input-height: 20vw;
+$input-max-height: 200px;
 $input-small-width: 30%;
 $input-small-height: 2.5rem;
 
 $input-box-shadow: 0 0 5px rgba($red-color, 0.5);
+
+// 이미지
+$image-width: 50vw;
+$image-max-width: 400px;
+$image-min-width: 170px;
