컴포넌트 생성중 중간커밋

--- a/public/components/molecules/delete-button/delete-button.scss
+++ b/public/components/molecules/delete-button/delete-button.scss
@@ -13,7 +13,7 @@
   transition: border-color va.$transition box-shadow va.$transition;
 
   &.focused {
-    box-shadow: va.$input-box-shadow;
+    box-shadow: va.$box-shadow;
     border-color: va.$blue-color;
   }
 }
