--- a/public/components/molecules/dropdown/dropdown.html
+++ b/public/components/molecules/dropdown/dropdown.html
@@ -2,20 +2,16 @@
   <div class="dropdown">
     <button class="dropdown-button">
       <span class="dropdown-label"></span>
-      <img
-        src="/images/arrow-down.png"
-        alt="Dropdown Arrow"
+      <div
         class="dropdown-img"
-        id="dropdown-down-img" />
-      <img
-        src="/images/arrow-up.png"
-        alt="Dropdown Arrow"
+        id="dropdown-down-img"></div>
+      <div
         class="dropdown-img hidden"
-        id="dropdown-up-img" />
+        id="dropdown-up-img"></div>
     </button>
   </div>
 
-  <ul class="dropdown-contents">
+  <ul class="dropdown-contents hidden">
     <li class="dropdown-item">
       <span class="dropdown-label">Item 1</span>
     </li>
