--- a/public/scss/abstracts/_variables.scss
+++ b/public/scss/abstracts/_variables.scss
@@ -15,7 +15,9 @@ $small-width: 30%;
 $small-max-width: 400px;
 $small-min-width: 150px;
 
+$thin-border: 1px solid $gray-color;
 $border: 2px solid $gray-color;
+$thick-border: 3px solid $gray-color;
 $border-radius: 22px;
 
 $transition: 0.2s ease-in-out;
