컴포넌트 거의 완성
- 이미지 칸 클릭이벤트 만들어야함.

--- a/public/components/atoms/Button/button.html
+++ b/public/components/atoms/Button/button.html
@@ -1,3 +1,3 @@
 <button class="button">
-  <span class="button-text">Click me?</span>
+  <span class="button-text component-label"></span>
 </button>
