--- a/public/components/molecules/dropdown/dropdown.html
+++ b/public/components/molecules/dropdown/dropdown.html
@@ -1,7 +1,7 @@
 <div class="dropdown-container">
   <div class="dropdown">
     <button class="dropdown-button">
-      <span class="dropdown-label"></span>
+      <span class="dropdown-label component-label"></span>
       <div
         class="dropdown-img"
         id="dropdown-down-img"></div>
