--- a/public/components/molecules/labeled-input/labeled-input.html
+++ b/public/components/molecules/labeled-input/labeled-input.html
@@ -1,3 +1,8 @@
 <div class="labeled-input">
-  <input class="input" />
+  <!-- label -->
+  <div
+    class="component-container"
+    data-component-url="/components/atoms/Label/label.html"></div>
+
+  <input class="input component-label" />
 </div>
