--- a/public/components/molecules/labeled-image/labeled-image.css
+++ b/public/components/molecules/labeled-image/labeled-image.css
@@ -22,7 +22,7 @@
   font-weight: 800;
   color: #292e1e;
   margin: auto;
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
 @font-face {
   font-family: "SUITE";
@@ -31,6 +31,7 @@
 }
 
 .label-div {
+  z-index: 5000;
   border-radius: 22px;
   width: auto;
   height: auto;
@@ -76,7 +77,7 @@
 
 .labeled-image .label-div {
   position: absolute;
-  top: 100%;
+  top: 95%;
   left: 50%;
   transform: translateX(-50%);
 }/*# sourceMappingURL=labeled-image.css.map */
