--- a/public/components/molecules/labeled-image/labeled-image.html
+++ b/public/components/molecules/labeled-image/labeled-image.html
@@ -1,7 +1,10 @@
-<div
-  id=""
-  class="labeled-image">
+<div class="labeled-image">
   <!-- img -->
+  <div
+    class="component-container"
+    data-component-url="/components/atoms/Image/image.html"
+    data-component-attrs='{"src":"/images/camera.png","alt":"카메라 아이콘"}'
+    style="display: flex; align-items: center; justify-content: center"></div>
   <input
     type="file"
     id="photoFile"
@@ -9,5 +12,11 @@
     capture="camera"
     style="display: none" />
   <!-- label-div -->
+  <div
+    class="component-container"
+    data-component-url="/components/atoms/Label/label.html"></div>
   <!-- button: 이미지 제거 -->
+  <div
+    class="component-container"
+    data-component-url="/components/molecules/delete-button/delete-button.html"></div>
 </div>
