--- a/public/components/molecules/labeled-input/labeled-input.css
+++ b/public/components/molecules/labeled-input/labeled-input.css
@@ -22,7 +22,7 @@
   font-weight: 800;
   color: #292e1e;
   margin: auto;
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
 @font-face {
   font-family: "SUITE";
@@ -31,6 +31,7 @@
 }
 
 .label-div {
+  z-index: 5000;
   border-radius: 22px;
   width: auto;
   height: auto;
