--- a/public/components/molecules/labeled-image/labeled-image.html
+++ b/public/components/molecules/labeled-image/labeled-image.html
@@ -11,7 +11,7 @@
     accept="image/*"
     capture="camera"
     style="display: none" />
-  <!-- label-div -->
+  <!-- label-div http://localhost:3000/index.html -->
   <div
     class="component-container"
     data-component-url="/components/atoms/Label/label.html"></div>
