--- a/public/components/organisms/add-product-modal/add-product-modal.html
+++ b/public/components/organisms/add-product-modal/add-product-modal.html
@@ -1,14 +1,14 @@
-<div class="background">
+<div class="modal-background">
   <div class="modal-container">
     <!-- title -->
     <div
-      id="title-company-info"
+      id="title-add-product"
       class="page-title-container component-container"
       data-component-url="/components/molecules/page-title/page-title.html"></div>
 
     <!-- dropdown -->
     <div
-      id="placeholder-choice-company"
+      id="placeholder-choice-product-name"
       class="dropdown-container component-container"
       data-component-url="/components/molecules/dropdown/dropdown.html"></div>
     <!-- input -->
@@ -16,5 +16,11 @@
       id="placeholder-product-name"
       class="input-container component-container"
       data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
+
+    <!-- add button -->
+    <div
+      id="add-button"
+      class="button-container component-container"
+      data-component-url="/components/atoms/Button/button.html"></div>
   </div>
 </div>
