--- a/public/components/organisms/add-product-modal/add-product-modal.scss
+++ b/public/components/organisms/add-product-modal/add-product-modal.scss
@@ -1,18 +1,32 @@
 @use "../../../scss/abstracts/variables" as va;
 
-.background {
+.add-modal-container {
+  width: 100%;
+  height: 100%;
+
+  background-color: va.$gray-color;
+  opacity: 0.5;
+}
+
+.modal-background {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  background-color: va.$gray-color;
+  background-color: rgba($color: va.$gray-color, $alpha: 0.5);
+  z-index: -1;
 }
+
 .modal-container {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
+
   display: flex;
   justify-content: center;
   align-items: center;
+
+  border-radius: va.$border-radius;
+  background-color: white;
 }
