--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,4 +133,42 @@
   font-family: "SUITE";
   font-weight: 400;
   src: url("/fonts/SUITE-Regular.woff2") format("woff2");
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+}
+
+.add-modal-container {
+  width: 100%;
+  height: 100%;
+  background-color: #948b89;
+  opacity: 0.5;
+  z-index: 6000;
+}
+
+.modal-background {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(148, 139, 137, 0.5);
+  z-index: -1;
+}
+
+.modal-container {
+  width: 80%;
+  height: 80%;
+  display: inline;
+  justify-content: center;
+  align-items: center;
+  border-radius: 22px;
+  background-color: white;
+}
+
+.component-container {
+  width: auto;
 }/*# sourceMappingURL=main.css.map */
