--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,6 +1,50 @@
-@use './abstracts/variables' as va;
-@use './abstracts/mixins' as mixins;
+@use "./abstracts/variables" as va;
+@use "./abstracts/mixins" as mixins;
 
-@use './components/input' as input;
-@use './components/button' as button;
-@use './components/span' as span;
+@use "./components/input" as input;
+@use "./components/button" as button;
+@use "./components/span" as span;
+
+body {
+  width: 100vw;
+  height: 100vh;
+
+  margin: 0;
+}
+
+.add-modal-container {
+  width: 100%;
+  height: 100%;
+
+  background-color: va.$gray-color;
+  opacity: 0.5;
+
+  z-index: 6000;
+}
+
+.modal-background {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba($color: va.$gray-color, $alpha: 0.5);
+  z-index: -1;
+}
+
+.modal-container {
+  width: 80%;
+  height: 80%;
+
+  display: inline;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: va.$border-radius;
+  background-color: white;
+}
+
+.component-container {
+    width: auto;
+}
