public 디렉토리 구조 변경
- 의미없이 복잡하게 되어있어서 조금 구조 변경함

--- a/public/components/molecules/labeled-image/_labeled-image.scss
+++ b/public/components/molecules/labeled-image/_labeled-image.scss
@@ -1,5 +1,7 @@
-@use "../../atoms/Label/label" as label;
-@use "../../atoms/Image/image" as image;
+@use "../../atoms/Label/label";
+@use "../../atoms/Image/image";
+@use "../../molecules/delete-button/delete-button";
+
 @use "../../../scss/abstracts/variables" as va;
 
 $ratio: 1;
