--- a/public/components/molecules/delete-button/_delete-button.scss
+++ b/public/components/molecules/delete-button/_delete-button.scss
@@ -1,20 +1,28 @@
+@use "../../../scss/abstracts/variables" as va;
+@use "../../../components/atoms/Button/button" as btn;
+
 .delete-button-container {
   width: 20%;
   aspect-ratio: 1;
+
   position: absolute;
   left: 85%;
   top: -5%;
+
   border-radius: 50%;
-  transition: border-color 0.2s ease-in-out box-shadow 0.2s ease-in-out;
-}
-.delete-button-container.focused {
-  box-shadow: 0 0 5px rgba(41, 46, 30, 0.5);
-  border-color: #3423a6;
+
+  transition: border-color va.$transition box-shadow va.$transition;
+
+  &.focused {
+    box-shadow: va.$box-shadow;
+    border-color: va.$blue-color;
+  }
 }
 
 .delete-button-container button {
   width: 100%;
   height: 100%;
+
   background-image: url("/images/cross.png");
   background-color: transparent;
   background-repeat: no-repeat;
@@ -23,15 +31,19 @@
   border: none;
   outline: none;
   cursor: pointer;
+
   border-radius: 50%;
+
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  &.disabled {
+    cursor: not-allowed;
+  }
+
+  &:active {
+    background-color: lighten($color: #000, $amount: 10%);
+  }
 }
-.delete-button-container button.disabled {
-  cursor: not-allowed;
-}
-.delete-button-container button:active {
-  background-color: #1a1a1a;
-}/*# sourceMappingURL=delete-button.css.map */
