ocr 페이지 css 적용한거 커밋함

--- a/public/components/molecules/labeled-image/labeled-image.html
+++ b/public/components/molecules/labeled-image/labeled-image.html
@@ -17,6 +17,6 @@
     data-component-url="/components/atoms/Label/label.html"></div>
   <!-- button: 이미지 제거 -->
   <div
-    class="component-container"
+    class="component-container hidden"
     data-component-url="/components/molecules/delete-button/delete-button.html"></div>
 </div>
