--- a/public/components/molecules/page-title/_page-title.scss
+++ b/public/components/molecules/page-title/_page-title.scss
@@ -6,10 +6,12 @@
   justify-content: center;
   align-items: center;
 
-  width: 80%;
-  aspect-ratio: 3.5 / 1;
+  height: 10vh;
+  width: 50vw;
+  // aspect-ratio: 10 / 1;
 
   background-color: va.$blue-color;
+  border-radius: va.$border-radius;
 }
 
 .page-title {
@@ -18,7 +20,4 @@
   font-size: 2.5rem;
   color: va.$white-color;
   text-align: center;
-
-  width: 100%;
-  height: 100%;
 }
