--- a/public/components/organisms/Header/header.html
+++ b/public/components/organisms/Header/header.html
@@ -1,1 +1,5 @@
-<header></header>
+<div id="header-title" class="header-container">
+  <div class="header-icon"></div>
+  <span class="header-span component-label"></span>
+  <button class="hamburger-menu"></button>
+</div>
