--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -4,6 +4,7 @@
 @use "./components/input" as input;
 @use "./components/button" as button;
 @use "./components/span" as span;
+@use "./components/modal";
 
 body {
   width: 100vw;
@@ -26,29 +27,6 @@ body {
   opacity: 0.5;
 
   z-index: 6000;
-}
-
-.modal-background {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background-color: rgba($color: va.$gray-color, $alpha: 0.5);
-  z-index: -1;
-}
-
-.modal-container {
-  width: 80%;
-  height: 80%;
-
-  display: inline;
-  justify-content: center;
-  align-items: center;
-
-  border-radius: va.$border-radius;
-  background-color: white;
 }
 
 .component-container {
