--- a/public/pages/ocr/ocr.scss
+++ b/public/pages/ocr/ocr.scss
@@ -1,6 +1,7 @@
 @use "../../components/atoms/Button/button";
 @use "../../components/molecules/labeled-image/labeled-image";
 @use "../../components/molecules/page-title/page-title";
+@use "../../components/organisms/Header/header";
 
 .margin-container {
   margin: 5vw 0;
