--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -6,17 +6,36 @@
 @use "./components/span" as span;
 @use "./components/modal";
 
+html,
 body {
-  width: 100vw;
-  height: 100vh;
-
+  height: 100%;
   margin: 0;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+header {
+  padding: 16px;
+}
+
+main {
+  flex: 1;
+  background: #f5f5f5;
+}
+
+footer {
+  color: white;
+  padding: 12px;
+  text-align: center;
 }
 
 .flex-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .add-modal-container {
@@ -30,5 +49,5 @@ body {
 }
 
 .component-container {
-    width: auto;
+  width: auto;
 }
